5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4138/executions/1675_2189.log
== TEST (2019-05-02 12:51:09) 
-- CODE:
x = input("insira o nome:").upper()

if(x[0] >= "A" and <= "K"):
	print(x,"vai para a sala",101)
elif(x[0] > "K" and <= "N"):
	print(x,"vai para a sala",102)
else:
	print(x,"vai para a sala",103)
-- ERROR:
File "XXXX", line 3
    if(x[0] >= "A" and <= "K"):
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 12:51:45) 
-- CODE:
x = input("insira o nome:").upper()

if(x[0] >= "A" and x[0] <= "K"):
	print(x,"vai para a sala",101)
elif(x[0] > "K" and x[0] <= "N"):
	print(x,"vai para a sala",102)
else:
	print(x,"vai para a sala",103)
-- EXECUTION TIME:
0.158702
-- TEST CASE 1:
---- input:
Maria
---- correct output:
Maria vai para a sala 102
---- user output:
MARIA vai para a sala 102
-- TEST CASE 2:
---- input:
Jose
---- correct output:
Jose vai para a sala 101
---- user output:
JOSE vai para a sala 101
-- TEST CASE 3:
---- input:
Zenilda
---- correct output:
Zenilda vai para a sala 103
---- user output:
ZENILDA vai para a sala 103
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 12:51:47) 
-- CODE:
x = input("insira o nome:").upper()

if(x[0] >= "A" and x[0] <= "K"):
	print(x,"vai para a sala",101)
elif(x[0] > "K" and x[0] <= "N"):
	print(x,"vai para a sala",102)
else:
	print(x,"vai para a sala",103)
-- OUTPUT:
MARIA vai para a sala 102
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 12:51:49) 
-- CODE:
x = input("insira o nome:").upper()

if(x[0] >= "A" and x[0] <= "K"):
	print(x,"vai para a sala",101)
elif(x[0] > "K" and x[0] <= "N"):
	print(x,"vai para a sala",102)
else:
	print(x,"vai para a sala",103)
-- EXECUTION TIME:
0.177184
-- TEST CASE 1:
---- input:
Maria
---- correct output:
Maria vai para a sala 102
---- user output:
MARIA vai para a sala 102
-- TEST CASE 2:
---- input:
Jose
---- correct output:
Jose vai para a sala 101
---- user output:
JOSE vai para a sala 101
-- TEST CASE 3:
---- input:
Zenilda
---- correct output:
Zenilda vai para a sala 103
---- user output:
ZENILDA vai para a sala 103
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 19:14:32) 
-- CODE:
x = input("insira o nome:").upper()

if(x[0] >= "A" and x[0] <= "K"):
	print(x,"vai para a sala",101)
elif(x[0] > "K" and x[0] <= "N"):
	print(x,"vai para a sala",102)
else:
	print(x,"vai para a sala",103)
-- OUTPUT:
MARIA vai para a sala 102
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 19:14:44) 
-- CODE:
x = input("insira o nome:").upper()

if(x[0] >= "A" and x[0] <= "K"):
	print(x,"vai para a sala",101)
elif(x[0] > "K" and x[0] <= "N"):
	print(x,"vai para a sala",102)
else:
	print(x,"vai para a sala",103)
-- OUTPUT:
MARIA vai para a sala 102
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 19:15:03) 
-- CODE:
x = input("insira o nome:")

if(x[0] >= "A" and x[0] <= "K"):
	print(x,"vai para a sala",101)
elif(x[0] > "K" and x[0] <= "N"):
	print(x,"vai para a sala",102)
else:
	print(x,"vai para a sala",103)
-- EXECUTION TIME:
0.134957
-- TEST CASE 1:
---- input:
Maria
---- correct output:
Maria vai para a sala 102
---- user output:
Maria vai para a sala 102
-- TEST CASE 2:
---- input:
Jose
---- correct output:
Jose vai para a sala 101
---- user output:
Jose vai para a sala 101
-- TEST CASE 3:
---- input:
Zenilda
---- correct output:
Zenilda vai para a sala 103
---- user output:
Zenilda vai para a sala 103
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
